Add websockets benchmark

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,23 @@
     <string name="app_name">android-pb-restful</string>
     <string name="action_settings">Settings</string>
 
-    <string name="title_host_config">Server settings</string>
+    <string name="title_activity_settings">Server settings</string>
+
+    <string name="title_host_config">Backend Server settings</string>
+
     <string name="title_edittext_host">Server IP address</string>
     <string name="summary_edittext_host">Here you can configure server address</string>
     <string name="dialog_title_host">Server host address</string>
-    <string name="title_activity_settings">Settings</string>
-    <string name="default_host">http://192.168.0.16:9090/</string>
+    <string name="default_host">192.168.0.16</string>
 
+    <string name="title_edittext_http_port">Http port</string>
+    <string name="summary_edittext_http_port">Here you can configure http port</string>
+    <string name="dialog_http_port">HTTP port</string>
+    <string name="default_http_port">9090</string>
+
+    <string name="title_edittext_ws_port">WebSocket port</string>
+    <string name="summary_edittext_ws_port">Here you can configure ws port</string>
+    <string name="dialog_ws_port">WebSocket port</string>
+    <string name="default_ws_port">9080</string>
 
 </resources>
