Add some dialogs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">android-pb-restful</string>
+    <string name="app_name">Benchmark Base64 x ProtocolBuffers</string>
     <string name="action_settings">Settings</string>
 
     <string name="title_activity_settings">Server settings</string>
@@ -20,5 +20,8 @@
     <string name="summary_edittext_ws_port">Here you can configure ws port</string>
     <string name="dialog_ws_port">WebSocket port</string>
     <string name="default_ws_port">9080</string>
+
+    <string name="please_wait">Please wait...</string>
+
 
 </resources>
